Update CI actions

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -5,9 +5,15 @@ name: Python application
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - 'main'
+      - 'feat/*'
+      - 'fix/*'
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - 'main'
+      - 'feat/*'
+      - 'fix/*'
 
 permissions:
   contents: read
